--- a/app/src/main/res/layout/activity_gcv_breakup.xml
+++ b/app/src/main/res/layout/activity_gcv_breakup.xml
@@ -16,8 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Basic Details"
-            android:gravity="center_horizontal"
-            android:background="@color/headingcolor"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -113,8 +112,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(A) OD Premium Package"
-            android:background="@color/headingcolor"
-            android:gravity="center"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/basic_details_table"
@@ -286,8 +284,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(B) Liability Premium"
-            android:background="@color/headingcolor"
-            android:gravity="center"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/od_details_table"
@@ -399,8 +396,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(C) Total Premium"
-            android:background="@color/headingcolor"
-            android:gravity="center"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tp_details_table"
