--- a/app/src/main/res/layout/activity_pcv3wheeler_breakup.xml
+++ b/app/src/main/res/layout/activity_pcv3wheeler_breakup.xml
@@ -15,8 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Basic Details"
-            android:background="@color/headingcolor"
-            android:gravity="center_horizontal"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="parent"
@@ -101,8 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(A) OD Premium Package"
-            android:background="@color/headingcolor"
-            android:gravity="center"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/basic_details_table"
@@ -261,8 +259,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(B) Liability Premium"
-            android:background="@color/headingcolor"
-            android:gravity="center"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/od_details_table"
@@ -361,8 +358,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(C) Total Premium"
-            android:background="@color/headingcolor"
-            android:gravity="center"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tp_details_table"
