--- a/app/src/main/res/layout/activity_splash_activity.xml
+++ b/app/src/main/res/layout/activity_splash_activity.xml
@@ -20,8 +20,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Premium Calculator"
-        android:textSize="20sp"
+        android:text="PREMIUM CALCULATOR"
+        android:textColor="@color/text_color"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
