--- a/app/src/main/res/layout/activity_two_wheeler.xml
+++ b/app/src/main/res/layout/activity_two_wheeler.xml
@@ -279,6 +279,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/calculate"
+            android:background="@color/colorAccent"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/table"
             app:layout_constraintEnd_toEndOf="parent"
