--- a/app/src/main/res/layout/activity_two_wheeler_breakup.xml
+++ b/app/src/main/res/layout/activity_two_wheeler_breakup.xml
@@ -15,8 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Basic Details"
-            android:background="@color/headingcolor"
-            android:gravity="center_horizontal"
+            style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -96,8 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(A) OD Premium Package"
-            android:background="@color/headingcolor"
-            android:gravity="center"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/basic_details_table"
@@ -244,8 +242,7 @@ style="@style/style_textbox_table_breakup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(B) Liability Premium"
-            android:background="@color/headingcolor"
-            android:gravity="center"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/od_details_table"
@@ -356,8 +353,7 @@ style="@style/style_textbox_table_breakup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(C) Total Premium"
-            android:background="@color/headingcolor"
-            android:gravity="center"
+style="@style/style_textbox_heading"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tp_details_table"
