Main Activity Opening Twice issue resolved

--- a/app/src/main/res/layout/activity_taxilessthan6.xml
+++ b/app/src/main/res/layout/activity_taxilessthan6.xml
@@ -340,7 +340,7 @@
 
         <Button
             android:id="@+id/calculate"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/calculate"
             app:layout_constraintStart_toStartOf="parent"
