--- a/app/src/main/res/layout/activity_two_wheeler_breakup.xml
+++ b/app/src/main/res/layout/activity_two_wheeler_breakup.xml
@@ -426,6 +426,7 @@ style="@style/style_textbox_table_breakup"
             android:layout_height="wrap_content"
             android:text="SHARE"
             android:layout_margin="30dp"
+            style="@style/style_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/commission_button"
@@ -435,6 +436,7 @@ style="@style/style_textbox_table_breakup"
             android:id="@+id/commission_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/style_button"
             android:text="Know Your Commision"
             android:layout_margin="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
