--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,10 @@
     <style name="style_button">
         <item name="android:padding"> @dimen/table_cell_padding </item>
         <item name="android:layout_margin"> @dimen/button_margin </item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:elevation" tools:targetApi="lollipop">9dp</item>
     </style>
 
     <style name="style_textbox_table_breakup">
