--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="background_color">#eeeeee</color>
     <color name="yellow">#f1c40f</color>
     <color name="white">#FFFFFF</color>
+    <color name="transparent">#00FFFF00</color>
     <color name="black">#000000</color>
     <color name="green">#27AE60</color>
     <color name="light_purple">#E8E1E7</color>
